--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,40 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
-                             https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
+         https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
 
-    <display-name>DevOps Inventory App</display-name>
-
-    <!-- DashboardServlet -->
-    <servlet>
-        <servlet-name>DashboardServlet</servlet-name>
-        <servlet-class>com.example.servlet.DashboardServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>DashboardServlet</servlet-name>
-        <url-pattern>/dashboard</url-pattern>
-    </servlet-mapping>
-
-    <!-- ProductServlet -->
-    <servlet>
-        <servlet-name>ProductServlet</servlet-name>
-        <servlet-class>com.example.servlet.ProductServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>ProductServlet</servlet-name>
-        <url-pattern>/product</url-pattern>
-    </servlet-mapping>
-
-    <!-- SaleServlet -->
-    <servlet>
-        <servlet-name>SaleServlet</servlet-name>
-        <servlet-class>com.example.servlet.SaleServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>SaleServlet</servlet-name>
-        <url-pattern>/sale</url-pattern>
-    </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 
 </web-app>
+
